<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">FireReporter</string>
  <string name="sPlace">Mark place</string>
  <string name="sRefresh">Refresh</string>
  <!-- tabs names-->
  <string name="tabSend">Send</string>
  <string name="tabView">View</string>
  <string name="tabSettings">Settings</string>
  <string name="tabAbout">About</string>
  <string name="tabSubscription">Subscriptions</string>
  <string name="tabNotification">Notifications</string>

  <!-- send tab -->
  <string name="sLatitude">Latitude</string>
  <string name="sLongitude">Longitude</string>
  <string name="sAzimuth">Azimuth</string>
  <string name="sLock">Lock position</string>
  <string name="sUnLock">Unlock position</string>
  <string name="sDistance">Distance, m</string>
  <string name="sComment">Comment</string>
  <string name="sSend">Send report</string>

  <!-- view tab -->
  <string name="sSearch">Search</string>
  <string name="sRows">Rows: </string>

  <!-- settings tab -->
  <string name="sGeneral">General</string>
  <string name="sGeneralSumm">The application general settings</string>
  <string name="sDatabase">Database settings</string>
  <string name="sSave">Save</string>
  <string name="stNasa">NASA:</string>
  <string name="stNasaServer">MOD14 server</string>
  <string name="stNasaServerSumm">The MOD14 server (data from NASA) settings</string>
  <string name="stUser">User:</string>
  <string name="stUserServer">User fires server</string>
  <string name="stUserServerSumm">The user fires (data from users) server settings</string>
  <string name="stScanex">Scanex:</string>
  <string name="stScanexServer">Scanex server</string>
  <string name="stScanexServerSumm">The Scanex server settings</string>
  <string name="stScanexServerUserFullName">Name</string>
  <string name="stScanexServerUserPhone">Phone</string>
  
  <!-- settings general -->
  <string name="sInterval">Network exchange interval</string>
  <string name="sRowsCount">Number of fires in response</string>
  <string name="sDaysBeforeSearchDate">Day interval to fetch fires</string>
  <string name="sRadiusGetFires">Radius in km to get fires</string>
  <string name="sSearchDate">Search by date</string>
  <string name="sBattSave">Saving battery</string>
  <string name="sShowLed">Show LED</string>
  <string name="sPlaySound">Play sound</string>
  <string name="sVibro">Vibro</string>
  <string name="stOn">On</string>
  <string name="stOff">Off</string>	
  
  <!-- settings db -->
  <string name="sServer">Server</string>
  <string name="sServerSummary">Database server</string>
  <string name="sPort">Port</string>
  <string name="sPortSummary">Database port</string>
  <string name="sDBase">Database</string>
  <string name="sDBaseSummary">Database name</string>
  <string name="sUser">User</string>
  <string name="sUserSummary">Database login</string>
  <string name="sPassword">Password</string>
  <string name="sPasswordSummary">Database password</string>
  <string name="sSSL">Use SSL</string>
  <string name="sSSLSummary">Use Secure Sockets Layer</string>
  <string name="sCheckDBConn">Check DB connection</string>
  <string name="sCheckDBConnSummary">Click to check DB connection</string>
  <string name="stSearchCurrentDayOn">Get fires for current date</string>
  <string name="stSearchCurrentDayOff">Get fires for all dates</string>
  <string name="stConnectionSucceeded">Connection succeeded</string>
  <string name="stConnectionFailed">Connection failed. Check you settings</string>
  
  <!-- about tab -->
  <string name="sHomepage">http://gis-lab.info/qa/firereporter.html</string>
  <string name="sAbout">Applicaion for sending reports about fires and viewing nearest fires for current user location.\n\nDevelopers:\n  Alexander Bruy\n  Maxim Dubinin\n  Dmitry Baryshnikov\n\nMore info at</string>

  <!-- application strings -->
  <string name="noNetwork">Network not available</string>
  <string name="saved">Saved successfully</string>

  <string name="noLocation">No location info</string>
  <string name="noGPS">GPS provider not available</string>
  <string name="noCompass">Compass sensor not available</string>
  <string name="reportStored">Report stored for delivery</string>
  <string name="reportSend">Report send</string>
  <string name="reportStoredFailed">Report stored failed</string>
  
  <string name="confirmSend">There are no coordinates yet.Proceed?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  
  <!-- progress dialog -->
  <string name="stDownLoading">Downloading...</string>
  <string name="stChecking">Ckecking...</string>
  <string name="stNetworkUnreach">Network is not available</string>
    
  <!-- compass -->

	<string name="compas_N">N</string>
	<string name="compas_NE">NE</string>
	<string name="compas_E">E</string>
	<string name="compas_SE">SE</string>
	<string name="compas_S">S</string>
	<string name="compas_SW">SW</string>
	<string name="compas_W">W</string>
	<string name="compas_NW">NW</string>
	<string name="coord_lat"></string>
	<string name="coord_lon"></string>
	
	<string name="sNetworkUnreach">The network unreacheable</string>
		
	<!-- defaults -->
	<string name="stDefaultServer">http://gis-lab.info/data/zp-gis/soft/fires.php</string>
	
	<!-- notifications -->
	<string name="sID">Identificator:</string>
	<string name="sCoordiantes">Coordinates:</string>
	<string name="sConfidence">Confidence:</string>
	<string name="sPower">Power:</string>
	<string name="sMap">Map URL:</string>
	<string name="sType">Type:</string>
	<string name="sScanPlace">Place:</string>
	<string name="sDate">Date:</string>
	<string name="sShownOnSite">WEB site URL:</string>
	
	<string name="stNewFireNotifications">New fire notification</string>
	<string name="stNewFireNotificationDetailes">Fire notifications detailes:</string>   
	<string name="km">km</string> 
	
	<string name="pref_cat_network">Network</string>
	<string name="pref_cat_data">Data</string>
	<string name="pref_cat_notify">Notifications</string>
</resources>
