<?xml version="1.0" encoding="utf-8"?>
<!--
* FireReporter
* ==========================================================================
* Report and view fires
*
* Copyright (C) 2013 NextGIS (http://nextgis.ru)
*
* This source is free software; you can redistribute it and/or modify it under
* the terms of the GNU General Public License as published by the Free
* Software Foundation; either version 2 of the License, or (at your option)
* any later version.
*
* This code is distributed in the hope that it will be useful, but WITHOUT ANY
* WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
* FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
* details.
*
* A copy of the GNU General Public License is available on the World Wide Web
* at <http://www.gnu.org/copyleft/gpl.html>. You can also obtain it by writing
* to the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
* MA 02111-1307, USA.
-->
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header 
        android:fragment="com.nextgis.firereporter.SettingsFragment"
        android:title="@string/sGeneral"
        android:summary="@string/sGeneralSumm">
    	<extra android:name="settings" android:value="general" />
    </header>
    <header 
        android:fragment="com.nextgis.firereporter.SettingsFragment"
        android:title="@string/stNasaServer"
        android:summary="@string/stNasaServerSumm">
    	<extra android:name="settings" android:value="nasa" />
    </header>
    <header 
        android:fragment="com.nextgis.firereporter.SettingsFragment"
        android:title="@string/stUserServer"
        android:summary="@string/stUserServerSumm">
    	<extra android:name="settings" android:value="user" />
    </header>
    <header 
        android:fragment="com.nextgis.firereporter.SettingsFragment"
        android:title="@string/stScanexServer"
        android:summary="@string/stScanexServerSumm">
    	<extra android:name="settings" android:value="scanex" />
    </header>
</preference-headers>
