<?xml version="1.0" encoding="utf-8"?>
<!--
* FireReporter
* ==========================================================================
* Report and view fires
*
* Copyright (C) 2013 NextGIS (http://nextgis.ru)
*
* This source is free software; you can redistribute it and/or modify it under
* the terms of the GNU General Public License as published by the Free
* Software Foundation; either version 2 of the License, or (at your option)
* any later version.
*
* This code is distributed in the hope that it will be useful, but WITHOUT ANY
* WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
* FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
* details.
*
* A copy of the GNU General Public License is available on the World Wide Web
* at <http://www.gnu.org/copyleft/gpl.html>. You can also obtain it by writing
* to the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
* MA 02111-1307, USA.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference 
        android:title="@string/sGeneral"
        android:summary="@string/sGeneralSumm"  >
        <intent 
            android:targetPackage="com.nextgis.firereporter"
            android:targetClass="com.nextgis.firereporter.SettingsActivity"
            android:action="com.nextgis.firereporter.PREFS_GENERAL" />
    </Preference>
    <Preference 
        android:title="@string/stNasaServer"
        android:summary="@string/stNasaServerSumm" >
        <intent 
            android:targetPackage="com.nextgis.firereporter"
            android:targetClass="com.nextgis.firereporter.SettingsActivity"
            android:action="com.nextgis.firereporter.PREFS_NASA" />
    </Preference>
    <Preference 
        android:title="@string/stUserServer"
        android:summary="@string/stUserServerSumm" >
        <intent 
            android:targetPackage="com.nextgis.firereporter"
            android:targetClass="com.nextgis.firereporter.SettingsActivity"
            android:action="com.nextgis.firereporter.PREFS_USER" />
    </Preference> 
    <Preference 
        android:title="@string/stScanexServer"
        android:summary="@string/stScanexServerSumm" >
        <intent 
            android:targetPackage="com.nextgis.firereporter"
            android:targetClass="com.nextgis.firereporter.SettingsActivity"
            android:action="com.nextgis.firereporter.PREFS_SCANEX" />
    </Preference>         
</PreferenceScreen>